# ipcodex

./: .gitignore  README.md  monitor.py  plan.md  pyproject.toml  新文件 2.txt  时间管理 v2.0.html  时间管理.html
.claude/: settings.local.json
TED_MCPs/Flomo_MCP_Ted/: README.md  claude_desktop_config_example.json  flomo_mcp.py  simple_test.py  test_input.txt  test_mcp.bat
docs/superpowers/plans/: 2026-07-12-web-dashboard.md
docs/superpowers/specs/: 2026-07-12-web-dashboard-design.md
samples/huawei/: ce_leaf_minimal.cfg  ce_unknown_commands.cfg
src/ipcodex/: __main__.py  cli.py  pipeline.py  source.py
src/ipcodex/cst/: models.py  parser.py
src/ipcodex/schema/: loader.py  matcher.py  models.py  types.py
src/ipcodex/schema/huawei_vrp/: commands.yaml  views.yaml
src/ipcodex/semantic/: interface.py  models.py  network.py  registry.py  system.py
src/ipcodex/web/: app.py  server.py
src/ipcodex/web/static/: app.js  index.html  styles.css
stock_website/: .gitignore  GitHub推送指南.md  README.md  app.py  requirements.txt  run.py  修改完成说明.md  全部A股数据完成说明.md  启动说明.md  图表和字体修改完成说明.md
stock_website/static/css/: styles.css
stock_website/static/js/: main.js  stock_detail.js
stock_website/templates/: index.html  stock_detail.html
tests/: test_cli.py  test_package.py  test_pipeline.py  test_source.py
tests/cst/: test_parser.py
tests/fixtures/: ce_leaf_minimal.expected.json  ce_unknown_commands.expected.json
tests/schema/: test_loader.py  test_matcher.py  test_types.py
tests/semantic/: test_interface.py  test_network.py  test_system.py
tests/web/: test_api.py
