[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ipcodex"
version = "0.1.0"
description = "Offline Huawei VRP configuration parser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
]

[project.scripts]
ipcodex = "ipcodex.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ipcodex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["ipcodex"]
branch = true
